--- a/Front/desktop/src/locales/en.json
+++ b/Front/desktop/src/locales/en.json
@@ -1,70 +1,240 @@
 {
-    "menu": {
-      "Apple": "Apple",
-      "About This Mac": "About This Mac",
-      "System Settings": "System Settings...",
-      "App Store": "App Store...",
-      "Recent Items": "Recent Items",
-      "Force Quit": "Force Quit...",
-      "Sleep": "Sleep",
-      "Restart": "Restart...",
-      "Shut Down": "Shut Down...",
-      "Lock Screen": "Lock Screen",
-      "Log Out": "Log Out...",
-  
-      "Finder": "Finder",
-      "New Finder Window": "New Finder Window",
-      "New Folder": "New Folder",
-      "New Smart Folder": "New Smart Folder",
-      "Find": "Find",
-      "Empty Trash": "Empty Trash...",
-  
-      "File": "File",
-      "New": "New",
-      "Open": "Open...",
-      "Open Recent": "Open Recent",
-      "Close Window": "Close Window",
-      "Save": "Save",
-      "Save As": "Save As...",
-      "Print": "Print...",
-  
-      "Edit": "Edit",
-      "Undo": "Undo",
-      "Redo": "Redo",
-      "Cut": "Cut",
-      "Copy": "Copy",
-      "Paste": "Paste",
-      "Select All": "Select All",
-  
-      "View": "View",
-      "as Icons": "as Icons",
-      "as List": "as List",
-      "as Columns": "as Columns",
-      "as Gallery": "as Gallery",
-      "Show Hidden Files": "Show Hidden Files",
-      "Show Path Bar": "Show Path Bar",
-      "Show Status Bar": "Show Status Bar",
-  
-      "Go": "Go",
-      "Back": "Back",
-      "Forward": "Forward",
-      "Computer": "Computer",
-      "Home": "Home",
-      "Documents": "Documents",
-      "Downloads": "Downloads",
-      "Applications": "Applications",
-      "Utilities": "Utilities",
-  
-      "Window": "Window",
-      "Minimize": "Minimize",
-      "Zoom": "Zoom",
-      "Tile Window to Left of Screen": "Tile Window to Left of Screen",
-      "Tile Window to Right of Screen": "Tile Window to Right of Screen",
-      "Bring All to Front": "Bring All to Front",
-  
-      "Help": "Help",
-      "Search": "Search",
-      "macOS Help": "macOS Help"
-    }
+  "menu": {
+    "Apple": "Apple",
+    "About This Mac": "About This Mac",
+    "System Settings": "System Settings...",
+    "App Store": "App Store...",
+    "Recent Items": "Recent Items",
+    "Force Quit": "Force Quit...",
+    "Sleep": "Sleep",
+    "Restart": "Restart...",
+    "Shut Down": "Shut Down...",
+    "Lock Screen": "Lock Screen",
+    "Log Out": "Log Out...",
+    "Finder": "Finder",
+    "New Finder Window": "New Finder Window",
+    "New Folder": "New Folder",
+    "New Smart Folder": "New Smart Folder",
+    "Find": "Find",
+    "Empty Trash": "Empty Trash...",
+    "File": "File",
+    "New": "New",
+    "Open": "Open...",
+    "Open Recent": "Open Recent",
+    "Close Window": "Close Window",
+    "Save": "Save",
+    "Save As": "Save As...",
+    "Print": "Print...",
+    "Edit": "Edit",
+    "Undo": "Undo",
+    "Redo": "Redo",
+    "Cut": "Cut",
+    "Copy": "Copy",
+    "Paste": "Paste",
+    "Select All": "Select All",
+    "View": "View",
+    "as Icons": "as Icons",
+    "as List": "as List",
+    "as Columns": "as Columns",
+    "as Gallery": "as Gallery",
+    "Show Hidden Files": "Show Hidden Files",
+    "Show Path Bar": "Show Path Bar",
+    "Show Status Bar": "Show Status Bar",
+    "Go": "Go",
+    "Back": "Back",
+    "Forward": "Forward",
+    "Computer": "Computer",
+    "Home": "Home",
+    "Documents": "Documents",
+    "Downloads": "Downloads",
+    "Applications": "Applications",
+    "Utilities": "Utilities",
+    "Window": "Window",
+    "Minimize": "Minimize",
+    "Zoom": "Zoom",
+    "Tile Window to Left of Screen": "Tile Window to Left of Screen",
+    "Tile Window to Right of Screen": "Tile Window to Right of Screen",
+    "Bring All to Front": "Bring All to Front",
+    "Help": "Help",
+    "Search": "Search",
+    "macOS Help": "macOS Help"
+  },
+  "parametre": {
+    "accessibility": "Accessibility",
+    "vision": "Vision",
+    "voiceOver": "VoiceOver",
+    "voiceOverDescription": "Screen reader for the visually impaired",
+    "zoom": "Zoom",
+    "zoomDescription": "Magnify the screen",
+    "displaySettings": "Display settings",
+    "increaseContrast": "Increase contrast",
+    "reduceTransparency": "Reduce transparency",
+    "reduceMotion": "Reduce animations",
+    "hearing": "Hearing",
+    "closedCaptions": "Closed Captions",
+    "closedCaptionsDescription": "Show captions for audio content",
+    "audioDescription": "Audio Description",
+    "audioDescriptionDescription": "Narration of visual elements",
+    "motor": "Motor",
+    "voiceControl": "Voice Control",
+    "voiceControlDescription": "Control the computer with your voice",
+    "switchControl": "Switch Control",
+    "switchControlDescription": "Use switches to navigate",
+    "keyboard": "Keyboard",
+    "stickyKeys": "Sticky Keys",
+    "stickyKeysDescription": "Press modifier keys one at a time",
+    "slowKeys": "Slow Keys",
+    "slowKeysDescription": "Adjust the delay between key press and acceptance",
+    "general": "General",
+    "shortcutsEnabled": "Accessibility shortcuts enabled",
+    "battery": "Battery",
+    "charged": "Charged",
+    "timeRemaining": "remaining",
+    "showPercentInMenuBar": "Show percentage in menu bar",
+    "powerSavingOptions": "Power saving options",
+    "optimizeVideoStreaming": "Optimize video streaming playback",
+    "enablePowerMode": "Enable low power mode",
+    "turnOffDisplayAfter": "Turn off display after",
+    "usageHistory": "Usage history",
+    "last24Hours": "Last 24 hours",
+    "batteryLevel": "Battery level",
+    "averageUsage": "Average usage",
+    "chargeCycles": "Charge cycles",
+    "condition": "Condition",
+    "normal": "Normal",
+    "perHour": "per hour",
+    "minutes2": "2 minutes",
+    "minutes5": "5 minutes",
+    "minutes10": "10 minutes",
+    "minutes30": "30 minutes",
+    "never": "Never",
+    "dateTime": "Date & Time",
+    "setAutomatically": "Set automatically",
+    "timeZone": "Time zone",
+    "currentTimeZone": "Current time zone",
+    "closestCity": "Closest city",
+    "dateFormat": "Date format",
+    "timeFormat": "Time format",
+    "use24Hour": "Use 24-hour format",
+    "showDayOfWeek": "Show day of the week",
+    "showDate": "Show date",
+    "showAmPm": "Show AM/PM",
+    "showSeconds": "Show seconds",
+    "menuBarClock": "Menu bar clock",
+    "announce": "Announce the time",
+    "announceInterval": "Announce interval",
+    "hourly": "Hourly",
+    "halfHourly": "Every half hour",
+    "quarterly": "Every quarter hour",
+    "displays": "Displays",
+    "arrangement": "Arrangement",
+    "dragDisplays": "Drag displays to rearrange their layout",
+    "nightShift": "Night Shift",
+    "nightShiftDescription": "Reduces blue light for better sleep",
+    "schedule": "Schedule",
+    "sunset": "Sunset to sunrise",
+    "custom": "Custom",
+    "colorTemperature": "Color temperature",
+    "less": "Less warm",
+    "more": "More warm",
+    "resolution": "Resolution",
+    "scaled": "Scaled",
+    "default": "Default for display",
+    "brightness": "Brightness",
+    "automaticBrightness": "Automatically adjust brightness",
+    "trueTone": "True Tone",
+    "trueToneDescription": "Automatically adjusts color balance based on ambient lighting",
+    "wallpaper": "Wallpaper",
+    "chooseDesktop": "Choose your desktop background",
+    "screenSaver": "Screen Saver",
+    "setupScreenSaver": "Set up your screen saver",
+    "dockAndMenuBar": "Dock & Menu Bar",
+    "customizeDock": "Customize your dock and menu bar",
+    "missionControl": "Mission Control",
+    "organizeWindows": "Organize your windows",
+    "keyRepeatRate": "Key repeat rate",
+    "delayUntilRepeat": "Delay until repeat",
+    "slow": "Slow",
+    "fast": "Fast",
+    "long": "Long",
+    "short": "Short",
+    "useFunctionKeys": "Use F1, F2, etc. as standard function keys",
+    "fnKeyNote": "Press the Fn key to use the special features printed on each key.",
+    "keyboardShortcuts": "Keyboard shortcuts",
+    "modify": "Modify",
+    "missionControlShortcut": "Mission Control",
+    "screenCapture": "Screen capture",
+    "spotlightShortcut": "Spotlight",
+    "input": "Input",
+    "autoCorrect": "Auto-correct",
+    "autoCapitalize": "Auto-capitalize",
+    "doubleSpacePeriod": "Double space for period",
+    "network": "Network",
+    "assistant": "Assistant",
+    "wifiNetwork": "Wi-Fi",
+    "connected": "Connected",
+    "disconnected": "Disconnected",
+    "enabled": "Enabled",
+    "disabled": "Disabled",
+    "ipAddress": "IP Address",
+    "subnetMask": "Subnet Mask",
+    "router": "Router",
+    "dns": "DNS",
+    "macAddress": "MAC Address",
+    "bluetooth": "Bluetooth",
+    "vpn": "VPN",
+    "notConfigured": "Not configured",
+    "configure": "Configure",
+    "security": "Security & Privacy",
+    "requirePasswordAfterSleep": "Require password after sleep",
+    "sleepInactivityNote": "Your Mac is set to go to sleep after 10 minutes of inactivity",
+    "allowAppDownloadedFrom": "Allow apps downloaded from",
+    "appStore": "App Store",
+    "identifiedDevelopers": "App Store and identified developers",
+    "anywhere": "Anywhere",
+    "fileVault": "FileVault",
+    "fileVaultEnabled": "FileVault is enabled for the disk \"Macintosh HD\"",
+    "diskEncrypted": "Your disk is encrypted",
+    "fileVaultDescription": "FileVault encrypts the contents of your Mac. If your Mac is lost or stolen, encryption prevents unauthorized access to your information.",
+    "firewall": "Firewall",
+    "firewallOn": "Firewall: On",
+    "firewallDescription": "Incoming connections are blocked for some apps and services",
+    "options": "Options",
+    "privacy": "Privacy",
+    "location": "Location",
+    "contacts": "Contacts",
+    "calendar": "Calendar",
+    "notifications": "Notifications",
+    "sound": "Sound",
+    "outputVolume": "Output volume",
+    "mute": "Mute",
+    "showVolumeInMenuBar": "Show volume in menu bar",
+    "outputDevice": "Output device",
+    "internalSpeakers": "Internal speakers",
+    "defaultDevice": "Default device",
+    "hdmi": "HDMI",
+    "notConnected": "Not connected",
+    "soundEffects": "Sound effects",
+    "playSoundEffects": "Play sound effects",
+    "playStartupSound": "Play sound on startup",
+    "alertVolume": "Alert volume",
+    "users": "Users & Groups",
+    "currentUser": "Current user",
+    "admin": "Administrator",
+    "loginItems": "Login items",
+    "loginItemsDescription": "Apps that start automatically when you log in",
+    "passwordSettings": "Password settings",
+    "changePassword": "Change password",
+    "automaticLogin": "Automatic login",
+    "guestUser": "Guest user",
+    "guestUserDescription": "Allow guests to use the computer without an account",
+    "otherUsers": "Other users",
+    "addUser": "Add user",
+    "loginOptions": "Login options",
+    "showUserList": "Show user list",
+    "showHints": "Show password hints",
+    "showRestartButtons": "Show restart buttons",
+    "fastUserSwitching": "Fast user switching",
+    "fastUserSwitchingDescription": "Switch users without closing apps"
   }
-  
+}
