--- a/Front/desktop/src/locales/fr.json
+++ b/Front/desktop/src/locales/fr.json
@@ -1,70 +1,274 @@
 {
-    "menu": {
-      "Apple": "Apple",
-      "About This Mac": "À propos de ce Mac",
-      "System Settings": "Réglages du système...",
-      "App Store": "App Store...",
-      "Recent Items": "Éléments récents",
-      "Force Quit": "Forcer à quitter...",
-      "Sleep": "Suspendre",
-      "Restart": "Redémarrer...",
-      "Shut Down": "Éteindre...",
-      "Lock Screen": "Verrouiller l’écran",
-      "Log Out": "Se déconnecter...",
-  
-      "Finder": "Finder",
-      "New Finder Window": "Nouvelle fenêtre Finder",
-      "New Folder": "Nouveau dossier",
-      "New Smart Folder": "Nouveau dossier intelligent",
-      "Find": "Rechercher",
-      "Empty Trash": "Vider la corbeille...",
-  
-      "File": "Fichier",
-      "New": "Nouveau",
-      "Open": "Ouvrir...",
-      "Open Recent": "Ouvrir un récent",
-      "Close Window": "Fermer la fenêtre",
-      "Save": "Enregistrer",
-      "Save As": "Enregistrer sous...",
-      "Print": "Imprimer...",
-  
-      "Edit": "Édition",
-      "Undo": "Annuler",
-      "Redo": "Rétablir",
-      "Cut": "Couper",
-      "Copy": "Copier",
-      "Paste": "Coller",
-      "Select All": "Tout sélectionner",
-  
-      "View": "Affichage",
-      "as Icons": "comme Icônes",
-      "as List": "comme Liste",
-      "as Columns": "comme Colonnes",
-      "as Gallery": "comme Galerie",
-      "Show Hidden Files": "Afficher les fichiers cachés",
-      "Show Path Bar": "Afficher la barre de chemin",
-      "Show Status Bar": "Afficher la barre d’état",
-  
-      "Go": "Aller",
-      "Back": "Retour",
-      "Forward": "Avancer",
-      "Computer": "Ordinateur",
-      "Home": "Accueil",
-      "Documents": "Documents",
-      "Downloads": "Téléchargements",
-      "Applications": "Applications",
-      "Utilities": "Utilitaires",
-  
-      "Window": "Fenêtre",
-      "Minimize": "Réduire",
-      "Zoom": "Agrandir",
-      "Tile Window to Left of Screen": "Placer la fenêtre à gauche de l’écran",
-      "Tile Window to Right of Screen": "Placer la fenêtre à droite de l’écran",
-      "Bring All to Front": "Tout ramener au premier plan",
-  
-      "Help": "Aide",
-      "Search": "Rechercher",
-      "macOS Help": "Aide macOS"
-    }
+  "menu": {
+    "Apple": "Apple",
+    "About This Mac": "À propos de ce Mac",
+    "System Settings": "Réglages du système...",
+    "App Store": "App Store...",
+    "Recent Items": "Éléments récents",
+    "Force Quit": "Forcer à quitter...",
+    "Sleep": "Suspendre",
+    "Restart": "Redémarrer...",
+    "Shut Down": "Éteindre...",
+    "Lock Screen": "Verrouiller l’écran",
+    "Log Out": "Se déconnecter...",
+    "Finder": "Finder",
+    "New Finder Window": "Nouvelle fenêtre Finder",
+    "New Folder": "Nouveau dossier",
+    "New Smart Folder": "Nouveau dossier intelligent",
+    "Find": "Rechercher",
+    "Empty Trash": "Vider la corbeille...",
+    "File": "Fichier",
+    "New": "Nouveau",
+    "Open": "Ouvrir...",
+    "Open Recent": "Ouvrir un récent",
+    "Close Window": "Fermer la fenêtre",
+    "Save": "Enregistrer",
+    "Save As": "Enregistrer sous...",
+    "Print": "Imprimer...",
+    "Edit": "Édition",
+    "Undo": "Annuler",
+    "Redo": "Rétablir",
+    "Cut": "Couper",
+    "Copy": "Copier",
+    "Paste": "Coller",
+    "Select All": "Tout sélectionner",
+    "View": "Affichage",
+    "as Icons": "comme Icônes",
+    "as List": "comme Liste",
+    "as Columns": "comme Colonnes",
+    "as Gallery": "comme Galerie",
+    "Show Hidden Files": "Afficher les fichiers cachés",
+    "Show Path Bar": "Afficher la barre de chemin",
+    "Show Status Bar": "Afficher la barre d’état",
+    "Go": "Aller",
+    "Back": "Retour",
+    "Forward": "Avancer",
+    "Computer": "Ordinateur",
+    "Home": "Accueil",
+    "Documents": "Documents",
+    "Downloads": "Téléchargements",
+    "Applications": "Applications",
+    "Utilities": "Utilitaires",
+    "Window": "Fenêtre",
+    "Minimize": "Réduire",
+    "Zoom": "Agrandir",
+    "Tile Window to Left of Screen": "Placer la fenêtre à gauche de l’écran",
+    "Tile Window to Right of Screen": "Placer la fenêtre à droite de l’écran",
+    "Bring All to Front": "Tout ramener au premier plan",
+    "Help": "Aide",
+    "Search": "Rechercher",
+    "macOS Help": "Aide macOS"
+  },
+  "parametre": {
+    "accessibility": "Accessibilité",
+    "vision": "Vision",
+    "voiceOver": "VoiceOver",
+    "voiceOverDescription": "Lecteur d'écran pour les personnes malvoyantes",
+    "zoom": "Zoom",
+    "zoomDescription": "Agrandir l'écran",
+    "displaySettings": "Paramètres d'affichage",
+    "increaseContrast": "Augmenter le contraste",
+    "reduceTransparency": "Réduire la transparence",
+    "reduceMotion": "Réduire les animations",
+    "hearing": "Audition",
+    "closedCaptions": "Sous-titres",
+    "closedCaptionsDescription": "Afficher les sous-titres pour le contenu audio",
+    "audioDescription": "Description audio",
+    "audioDescriptionDescription": "Narration des éléments visuels",
+    "motor": "Motricité",
+    "voiceControl": "Contrôle vocal",
+    "voiceControlDescription": "Contrôler l'ordinateur avec la voix",
+    "switchControl": "Contrôle par commutateur",
+    "switchControlDescription": "Utiliser des commutateurs pour naviguer",
+    "keyboard": "Clavier",
+    "stickyKeys": "Touches rémanentes",
+    "stickyKeysDescription": "Appuyer sur les touches de modification une à la fois",
+    "slowKeys": "Touches lentes",
+    "slowKeysDescription": "Ajuster le délai entre l'appui et l'acceptation d'une touche",
+    "general": "Général",
+    "shortcutsEnabled": "Raccourcis d'accessibilité activés",
+    "battery": "Batterie",
+    "charged": "Chargé",
+    "timeRemaining": "restantes",
+    "showPercentInMenuBar": "Afficher le pourcentage dans la barre de menus",
+    "powerSavingOptions": "Options d'économie d'énergie",
+    "optimizeVideoStreaming": "Optimiser la lecture vidéo en streaming",
+    "enablePowerMode": "Activer le mode économie d'énergie",
+    "turnOffDisplayAfter": "Mettre en veille l'écran après",
+    "usageHistory": "Historique d'utilisation",
+    "last24Hours": "Dernières 24 heures",
+    "batteryLevel": "Niveau de batterie",
+    "averageUsage": "Utilisation moyenne",
+    "chargeCycles": "Cycles de charge",
+    "condition": "État",
+    "normal": "Normal",
+    "perHour": "par heure",
+    "minutes2": "2 minutes",
+    "minutes5": "5 minutes",
+    "minutes10": "10 minutes",
+    "minutes30": "30 minutes",
+    "never": "Jamais",
+    "dateTime": "Date et heure",
+    "setAutomatically": "Régler automatiquement",
+    "timeZone": "Fuseau horaire",
+    "currentTimeZone": "Fuseau horaire actuel",
+    "closestCity": "Ville la plus proche",
+    "dateFormat": "Format de date",
+    "timeFormat": "Format d'heure",
+    "use24Hour": "Utiliser le format 24 heures",
+    "showDayOfWeek": "Afficher le jour de la semaine",
+    "showDate": "Afficher la date",
+    "showAmPm": "Afficher AM/PM",
+    "showSeconds": "Afficher les secondes",
+    "menuBarClock": "Horloge dans la barre de menus",
+    "announce": "Annoncer l'heure",
+    "announceInterval": "Intervalle d'annonce",
+    "hourly": "Toutes les heures",
+    "halfHourly": "Toutes les demi-heures",
+    "quarterly": "Tous les quarts d'heure",
+    "displays": "Moniteurs",
+    "arrangement": "Disposition",
+    "dragDisplays": "Faites glisser les moniteurs pour réorganiser leur disposition",
+    "nightShift": "Night Shift",
+    "nightShiftDescription": "Réduit la lumière bleue pour un meilleur sommeil",
+    "schedule": "Programmation",
+    "sunset": "Du coucher au lever du soleil",
+    "custom": "Personnalisée",
+    "colorTemperature": "Température de couleur",
+    "less": "Moins chaude",
+    "more": "Plus chaude",
+    "resolution": "Résolution",
+    "scaled": "À l'échelle",
+    "default": "Par défaut pour l'écran",
+    "brightness": "Luminosité",
+    "automaticBrightness": "Ajuster automatiquement la luminosité",
+    "trueTone": "True Tone",
+    "trueToneDescription": "Ajuste automatiquement la balance des couleurs selon l'éclairage ambiant",
+    "wallpaper": "Fond d'écran",
+    "chooseDesktop": "Choisir votre fond d'écran",
+    "screenSaver": "Économiseur d'écran",
+    "setupScreenSaver": "Configurer votre économiseur d'écran",
+    "dockAndMenuBar": "Dock et barre de menus",
+    "customizeDock": "Personnaliser votre dock et barre de menus",
+    "missionControl": "Mission Control",
+    "organizeWindows": "Organiser vos fenêtres",
+    "keyRepeatRate": "Vitesse de répétition des touches",
+    "delayUntilRepeat": "Délai avant répétition",
+    "slow": "Lente",
+    "fast": "Rapide",
+    "long": "Long",
+    "short": "Court",
+    "useFunctionKeys": "Utiliser les touches F1, F2, etc. comme touches de fonction standard",
+    "fnKeyNote": "Appuyez sur la touche Fn pour utiliser les fonctionnalités spéciales imprimées sur chaque touche.",
+    "keyboardShortcuts": "Raccourcis clavier",
+    "modify": "Modifier",
+    "missionControlShortcut": "Mission Control",
+    "screenCapture": "Capture d'écran",
+    "spotlightShortcut": "Spotlight",
+    "input": "Saisie",
+    "autoCorrect": "Correction automatique",
+    "autoCapitalize": "Majuscules automatiques",
+    "doubleSpacePeriod": "Point par double espace",
+    "network": "Réseau",
+    "assistant": "Assistant",
+    "wifiNetwork": "Wi-Fi",
+    "connected": "Connecté",
+    "disconnected": "Déconnecté",
+    "enabled": "Activé",
+    "disabled": "Désactivé",
+    "ipAddress": "Adresse IP",
+    "subnetMask": "Masque de sous-réseau",
+    "router": "Routeur",
+    "dns": "DNS",
+    "macAddress": "Adresse MAC",
+    "bluetooth": "Bluetooth",
+    "vpn": "VPN",
+    "notConfigured": "Non configuré",
+    "configure": "Configurer",
+    "security": "Sécurité et confidentialité",
+    "requirePasswordAfterSleep": "Exiger le mot de passe après la mise en veille",
+    "sleepInactivityNote": "Votre Mac est configuré pour se mettre en veille après 10 minutes d'inactivité",
+    "allowAppDownloadedFrom": "Autoriser les applications téléchargées de",
+    "appStore": "App Store",
+    "identifiedDevelopers": "App Store et développeurs identifiés",
+    "anywhere": "N'importe où",
+    "fileVault": "FileVault",
+    "fileVaultEnabled": "FileVault est activé pour le disque \"Macintosh HD\"",
+    "diskEncrypted": "Votre disque est chiffré",
+    "fileVaultDescription": "FileVault chiffre le contenu de votre Mac. Si votre Mac est perdu ou volé, le chiffrement empêche l'accès non autorisé à vos informations.",
+    "firewall": "Pare-feu",
+    "firewallOn": "Pare-feu: Activé",
+    "firewallDescription": "Les connexions entrantes sont bloquées pour certaines applications et services",
+    "options": "Options",
+    "privacy": "Confidentialité",
+    "location": "Localisation",
+    "contacts": "Contacts",
+    "calendar": "Calendrier",
+    "notifications": "Notifications",
+    "sound": "Son",
+    "outputVolume": "Volume de sortie",
+    "mute": "Couper le son",
+    "showVolumeInMenuBar": "Afficher le volume dans la barre de menus",
+    "outputDevice": "Périphérique de sortie",
+    "internalSpeakers": "Haut-parleurs intégrés",
+    "defaultDevice": "Périphérique par défaut",
+    "hdmi": "HDMI",
+    "notConnected": "Non connecté",
+    "soundEffects": "Effets sonores",
+    "playSoundEffects": "Jouer les effets sonores",
+    "playStartupSound": "Jouer un son au démarrage",
+    "alertVolume": "Volume des alertes",
+    "users": "Utilisateurs et groupes",
+    "currentUser": "Utilisateur actuel",
+    "admin": "Administrateur",
+    "loginItems": "Éléments de connexion",
+    "loginItemsDescription": "Applications qui démarrent automatiquement à la connexion",
+    "passwordSettings": "Paramètres de mot de passe",
+    "changePassword": "Changer le mot de passe",
+    "automaticLogin": "Connexion automatique",
+    "guestUser": "Utilisateur invité",
+    "guestUserDescription": "Permet aux invités d'utiliser l'ordinateur sans compte",
+    "otherUsers": "Autres utilisateurs",
+    "addUser": "Ajouter un utilisateur",
+    "loginOptions": "Options de connexion",
+    "showUserList": "Afficher la liste des utilisateurs",
+    "showHints": "Afficher les indices de mot de passe",
+    "showRestartButtons": "Afficher les boutons de redémarrage",
+    "fastUserSwitching": "Changement rapide d'utilisateur",
+    "fastUserSwitchingDescription": "Permet de changer d'utilisateur sans fermer les applications",
+    "settingsTitle": "Paramètres",
+    "back": "Retour",
+    "save": "Enregistrer",
+    "cancel": "Annuler",
+    "appInfo": "Identifié Apple, iCloud, contenu multimédia et App Store",
+    "appleId": "Identifiant Apple",
+    "familySharing": "Partage familial",
+    "searchPlaceholder": "Rechercher",
+    "desktop": "Bureau et économiseur d'écran",
+    "dock": "Dock et barre de menus",
+    "siri": "Siri",
+    "spotlight": "Spotlight",
+    "language": "Langue et région",
+    "internetAccounts": "Comptes internet",
+    "wallet": "Wallet et Apple Pay",
+    "touchId": "Touch ID",
+    "screenTime": "Temps d'écran",
+    "extensions": "Extensions",
+    "softwareUpdate": "Mise à jour de logiciel",
+    "printers": "Imprimantes et scanners",
+    "trackpad": "Trackpad",
+    "mouse": "Souris",
+    "sidecar": "Sidecar",
+    "sharing": "Partage",
+    "timeMachine": "Time Machine",
+    "startupDisk": "Disque de démarrage",
+    "builtInDisplay": "Écran intégré",
+    "dynamicDesktop": "Bureau dynamique",
+    "lightDarkDesktop": "Bureau clair et sombre",
+    "showLess": "Afficher moins",
+    "showAll": "Afficher tout",
+    "venturaGraphic": "Graphique Ventura",
+    "desktopChanges": "Ce fond d'écran change tout au long de la journée.",
+    "desktop_pc":"Ordinateur"
   }
-  
+}
